[package]
name = "mpv"
version = "0.2.0"
authors = ["Cobrand <cobrandw@gmail.com>","yamakaky"]
description = "safe mpv bindings for Rust"
homepage = "https://github.com/Cobrand/mpv-rs"
repository = "https://github.com/Cobrand/mpv-rs"

keywords = ["mpv", "video","player","media","binding"]
license = "Zlib"

[dependencies]
log = "0.3"
enum_primitive = "0.1"
num = "0.1"

[dev-dependencies]
sdl2 = "0.20"
sdl2-sys = "0.19"
